fixed transform on mobile-menu

--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ header {
     border: 2px solid #ffcc00;
     border-radius: 5%;
     padding: 10px;
-    transform: translateY(20px);
+    transform: translateY(5px);
     top: 0;
     right:0;
     position: absolute;
